[gd_scene load_steps=6 format=3 uid="uid://du84bp5ler16a"]

[ext_resource type="Script" uid="uid://bnqwqa8bm4ydj" path="res://scripts/ui/SaveSelectScreen/SaveSlot/saveSlot.gd" id="1_nptmv"]
[ext_resource type="Texture2D" uid="uid://imrvaefvkvpb" path="res://assets/images/delete.png" id="2_yd3vp"]
[ext_resource type="Texture2D" uid="uid://e26mab3mdg7d" path="res://assets/images/delete_hover_border.png" id="3_yd3vp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nptmv"]
resource_local_to_scene = true
bg_color = Color(0.165656, 0.165656, 0.165656, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b3u5o"]

[node name="SaveSlot" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_nptmv")
script = ExtResource("1_nptmv")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Margin"]
layout_mode = 2
alignment = 1

[node name="Text" type="VBoxContainer" parent="Margin/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="SaveName" type="Label" parent="Margin/HBoxContainer/Text"]
custom_minimum_size = Vector2(620, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Save Name"

[node name="SublineMargin" type="MarginContainer" parent="Margin/HBoxContainer/Text"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 2

[node name="Subline" type="HBoxContainer" parent="Margin/HBoxContainer/Text/SublineMargin"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Day" type="Label" parent="Margin/HBoxContainer/Text/SublineMargin/Subline"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Day 0"

[node name="Time" type="Label" parent="Margin/HBoxContainer/Text/SublineMargin/Subline"]
layout_mode = 2
text = "08:00"

[node name="VSeparator" type="VSeparator" parent="Margin/HBoxContainer/Text/SublineMargin/Subline"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_b3u5o")

[node name="Location" type="Label" parent="Margin/HBoxContainer/Text/SublineMargin/Subline"]
layout_mode = 2
text = "Martha's Vinyard"

[node name="DeleteSaveButton" type="TextureButton" parent="Margin/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
texture_normal = ExtResource("2_yd3vp")
texture_hover = ExtResource("3_yd3vp")
ignore_texture_size = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="Margin/HBoxContainer/DeleteSaveButton" to="." method="_on_delete_save_button_mouse_entered"]
[connection signal="mouse_exited" from="Margin/HBoxContainer/DeleteSaveButton" to="." method="_on_delete_save_button_mouse_exited"]
[connection signal="pressed" from="Margin/HBoxContainer/DeleteSaveButton" to="." method="_on_delete_save_pressed"]
